CHANGES
=======

3.6.1 (unreleased)
------------------

- Fix ftesting.zcml due to ``zope.securitypolicy`` update.


3.6.0 (2009-05-18)
------------------

- ``ISystemErrorView`` interface has been moved to
  ``zope.browser.interfaces``, leaving BBB import here.

- Cut dependency on ``zope.formlib`` by requiring newer version of
  ``zope.app.pagetemplate`` which now contains ``namedtemplate``.


3.5.0 (2009-04-06)
------------------

- Use new ``zope.authentication`` instead of ``zope.app.security``.

- Removed deprecated code and thus removed dependency on zope.deferredimport.

- Removed old zpkg-related SETUP.cfg file.

3.4.2 (2009-01-27)
------------------

- Substitute zope.app.zapi by direct calls to its wrapped apis. See
  bug 219302.

- Fixed author email and home page.


3.4.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.0 (2007-10-24)
------------------

- Initial release independent of the main Zope tree.