@@ -65,10 +65,10 @@ setup(name='zope.app.exception',
           'zope.app.zptpage',
       ]),
       install_requires=['setuptools',
-                        'zope.app.pagetemplate>=3.6',
                         'zope.interface',
                         'zope.publisher',
                         'zope.browser>=1.2',
+                        'zope.browserpage>=3.11.0',
                         ],
       include_package_data = True,
       zip_safe = False,
